tools/tests/errors/unexpected_keyword.ki
var f = Function(a):
    return a
f(z = 1)
